Wrong size for one of the images and fixed the z-index so the first image shows on top for each project initially.

--- a/css/mag.scss
+++ b/css/mag.scss
@@ -434,11 +434,11 @@ footer
 			right:0;
 			margin-left:auto;
 			margin-right:auto;
-			
-			&:first-child
-			{
-				z-index: 1;
-			}
+		}
+		
+		> div > div > a:first-child > img
+		{
+			z-index: 1;
 		}
 		
 		header
